[Win] WTF::RunLoop: RegisterClass has to be called in the main thread before creating other threads https://bugs.webkit.org/show_bug.cgi?id=255624

Reviewed by Don Olmstead.

CreateWindow was randomly failing in the GPU process for WebGL tests
for Windows port. This seems to be a theading issue of calling
CreateWindow in a different thread rather than one called
RegisterClass. RegisterClass has to be called in the main thread
before creating other threads. Reverted 228617@main.

* Source/WTF/wtf/win/MainThreadWin.cpp:
(WTF::initializeMainThreadPlatform):
* Source/WTF/wtf/win/RunLoopWin.cpp:
(WTF::RunLoop::registerRunLoopMessageWindowClass):
(WTF::RunLoop::RunLoop):

Canonical link: https://commits.webkit.org/263194@main